force-app/main/default/objects/Contract_Premise__c/Contract_Premise__c.object-meta.xml
<CustomObject>
    <description>link between contracts and premises</description>
    <label>Contract Premise</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Contract Premise ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Premises</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>