force-app/main/default/objects/Contract_Premise__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <label>Allocation % DON&#39;T USE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>