force-app/main/default/objects/Contract_Premise__c/fields/CESContract__c.field-meta.xml
<CustomField>
    <fullName>CESContract__c</fullName>
    <label>CES Contract</label>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipLabel>Contract Premises</relationshipLabel>
    <relationshipName>Contract_Premises</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>