force-app/main/default/objects/Contract_Premise__c/fields/Contract_Pending_TC_Revision__c.field-meta.xml
<CustomField>
    <fullName>Contract_Pending_TC_Revision__c</fullName>
    <formula>CESContract__r.Pending_TC_Revision__c</formula>
    <label>Contract Pending TC Revision</label>
    <type>Checkbox</type>
</CustomField>