force-app/main/default/objects/Contract_Premise__c/fields/ContractIssued__c.field-meta.xml
<CustomField>
    <fullName>ContractIssued__c</fullName>
    <formula>ISPICKVAL(CESContract__r.Contract_Status__c , &quot;Activated&quot;) &amp;&amp; ISPICKVAL( CESContract__r.Confirmation_Status__c, &quot;Issued&quot;)</formula>
    <label>ContractIssued</label>
    <type>Checkbox</type>
</CustomField>