force-app/main/default/objects/Contract_Premise__c/fields/ContractRecordType__c.field-meta.xml
<CustomField>
    <fullName>ContractRecordType__c</fullName>
    <formula>CESContract__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContractRecordType</label>
    <type>Text</type>
</CustomField>