force-app/main/default/objects/Contract_Premise__c/fields/CP_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>CP ID</label>
    <type>Text</type>
</CustomField>