force-app/main/default/objects/Contract_Premise__c/fields/Interface_Action__c.field-meta.xml
<CustomField>
    <fullName>Interface_Action__c</fullName>
    <label>Interface Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>