force-app/main/default/objects/Contract_Premise__c/fields/Parent_Contract_F__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract_F__c</fullName>
    <formula>CASESAFEID(CESContract__r.Parent_Contract__c)</formula>
    <label>Parent Contract F</label>
    <type>Text</type>
</CustomField>