force-app/main/default/objects/Contract_Premise__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <label>Premise</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Contract Premises</relationshipLabel>
    <relationshipName>Contract_Premises</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>