force-app/main/default/objects/Contract_Premise__c/fields/Remit_Tax__c.field-meta.xml
<CustomField>
    <fullName>Remit_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remit Tax</label>
    <type>Checkbox</type>
</CustomField>