force-app/main/default/objects/Contract_Premise__c/fields/Safari_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Safari_Sync_Status__c</fullName>
    <label>Safari Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Sync</fullName>
            </value>
            <value>
                <fullName>Sync in Progress</fullName>
            </value>
            <value>
                <fullName>Sync Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>