force-app/main/default/objects/Contract_Premise__c/fields/Storage_Type_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Storage_Type_Group_Number__c</fullName>
    <description>grouping mechanism for storage contracts</description>
    <label>Storage Type Group Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>