force-app/main/default/objects/Contract_Premise__c/fields/Sync_Batch__c.field-meta.xml
<CustomField>
    <fullName>Sync_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sync Batch</label>
    <referenceTo>Sync_Batch__c</referenceTo>
    <relationshipLabel>Contract Premises</relationshipLabel>
    <relationshipName>Contract_Premises</relationshipName>
    <type>Lookup</type>
</CustomField>