force-app/main/default/objects/Contract_Premise__c/fields/Taxable__c.field-meta.xml
<CustomField>
    <fullName>Taxable__c</fullName>
    <label>Taxable %</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>