force-app/main/default/objects/Contract_Premise__c/fields/Terminated__c.field-meta.xml
<CustomField>
    <fullName>Terminated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if this record changed, is it due to a termination?</description>
    <inlineHelpText>if this record changed, is it due to a termination?</inlineHelpText>
    <label>Terminated</label>
    <type>Checkbox</type>
</CustomField>